--- a/tutorials_introduction.html
+++ b/tutorials_introduction.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>Knockback-Inspector.js</title>
+    <title>Tutorials Overview</title>
     <link rel="stylesheet" href="vendor/css/normalize.css">
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap-responsive.min.css">
@@ -55,13 +55,25 @@
     <div class="container">
       <header class="page">
       </header>
-      <content class="page"><h1>Compatible Components: Knockback-Inspector.js</h1>
-<p>Knockback-Inspector.js provides a way to embed a View in your application (typically for debugging) where you can visualize and edit a tree view of your RESTful data!
+      <content class="page">
+        <section><h1>Knockback.js Tutorials</h1>
+<p>We have prepared some tutorials to help explain introduct Knockback.js concepts and to provide solutions to common problems.
+
 </p>
+<h2>Tutorials</h2>
+<p>You can find the various &#39;Tutorials&#39; in the navigation bar above:
 
-        <h3>Try out the Knockback-Inspector:</h3>
-        <iframe style="width: 100%; height: 450px" src="http://jsfiddle.net/kmalakoff/FRhEV/embedded/result,js,html,resources/" allowfullscreen="allowfullscreen" frameborder="0"></iframe><p>You should take a look at the <a href="tutorial_knockback_inspector.html">Knockback-Inspector Tutorial</a> which provides an advanced, step-by-step tutorial showing how the inspector was built.</p>
+</p>
+<ul>
+<li><a href="tutorial_kb_observable.html">kb.Observable</a>: shows how to create and customize an observable for a single Model attribute</li>
+<li><a href="tutorial_kb_view_model.html">kb.ViewModel</a>: show how to create and customize ViewModel that holds observables for some or all of a Model&#39;s attributes.</li>
+<li><a href="tutorial_nested_models.html">Nested Models</a>: shows how to choose the ViewModel used for a Model stored in another Model&#39;s attributes.</li>
+<li><a href="tutorial_relational_models.html">Relational Models</a>: shows how to display and manipulate collections of Models stored in a Model&#39;s attributes. You can manage relationships by hand or using a compatible component like Backbone-Relational.js.</li>
+<li><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a>: shows how to add observables that automatically change when a global locale for your application changes.</li>
+<li><a href="tutorial_locale_manager.html">Custom Locale Manager</a> - shows how to store translated strings by locale in a simple locale manager and notify observers when the locale changes.</li>
+</ul>
 
+        </section>
       </content>
       <footer class="page">
       </footer>
