--- a/getting_started_introduction.html
+++ b/getting_started_introduction.html
@@ -31,7 +31,7 @@
                 <li><a href="doc/index.html">API</a></li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Getting Started<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
+                    <li></li><a href="getting_started_introduction.html">Overview</a><a href="getting_started_dependent_library_basics.html">Dependent Library Basics</a><a href="getting_started_knockback_basics.html">Knockback Basics</a><a href="getting_started_views_view_models_models.html">Models, Views, and ViewModels</a><a href="getting_started_memory_lifecycle_management.html">Memory and Lifecycle Management</a><a href="getting_started_knockback_important_details.html">Knockback Important Details</a>
                   </ul>
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components<b class="caret"></b></a>
@@ -46,11 +46,25 @@
                 </li>
                 <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Tutorials<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li></li><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a>
+                    <li></li><a href="tutorials_introduction.html">Introduction</a><a href="tutorial_kb_observable.html">kb.Observable</a><a href="tutorial_kb_view_model.html">kb.ViewModel</a><a href="tutorial_nested_models.html">Nested Models</a><a href="tutorial_relational_models.html">Relational Models</a><a href="tutorial_kb_localized_observable.html">kb.LocalizedObservable</a><a href="tutorial_locale_manager.html">Custom Locale Manager</a><a href="tutorial_knockback_inspector.html">Knockback Inspector (Advanced)</a>
                   </ul>
                 </li>
                 <li><a href="https://github.com/kmalakoff/knockback/wiki/Release-Notes">Release Notes</a></li>
               </ul>
+              <div id="script_language">
+                <div class="separator">
+                  <div class="selection codestyle">
+                    <div class="option">
+                      <input id="cs-cs" type="radio" name="codestyle" value="cs" class="auto"/>
+                      <label for="cs-cs">CS</label>
+                    </div>
+                    <div class="option">
+                      <input id="cs-js" type="radio" name="codestyle" value="js"/>
+                      <label for="cs-js">JS</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -64,7 +78,27 @@
 <p>In essence, <a href="index.html">Knockback.js</a> bridges the dynamic DOM bindings of <a href="http://knockoutjs.com/">Knockout.js</a> with the models, computeds, and routers of <a href="http://documentcloud.github.com/backbone/">Backbone.js</a>. It also brings some other cool features like localization, default values, and nested view models!
 
 </p>
-<h2>Useful Resources</h2>
+<p>If you are more of JavaScript developer than a CoffeeScript hipster, check out the JavaScript language toggle for the site (at the top right) on many pages with code and live examples.
+
+</p>
+<h1>Tidbits</h1>
+<ul>
+<li><p>&#39;kb&#39; and &#39;Knockback&#39; can be used interchangeably</p>
+</li>
+<li><p>Knockback.js uses the following coding conventions: ClassName, functionName, property_name, &#39;constant string&#39;, &quot;dynamic string&quot;, CONSTANT_NAME</p>
+</li>
+</ul>
+<h1>Classes vs Factory Functions</h1>
+<p>You will soon notice that there are different capitalizations for things like kb.viewModel(model, options) and kb.ViewModel. The reason is that to reduce the need of using <code>new</code> and to be more familiar with Knockout, there are factory methods that create the underlying classes.
+
+</p>
+<p>A factory function uses new to create a new instance:
+</p>
+
+          <pre data-for="cs">Knockback.viewModel = (model, options) -&gt; return new Knockback.ViewModel(model, options)
+</pre>
+          <pre data-for="js">Knockback.viewModel = function(model, options) { return new Knockback.ViewModel(model, options); };
+</pre><h1>Useful Resources</h1>
 <p>Before you start with Knockback.js, we recommend you first get acquainted with Backbone.js and Knockout.js by reviewing their websites (above) and you could also look at these resources:
 
 </p>
@@ -76,7 +110,7 @@
 <p>For Knockback.js, also take a look at this <a href="index.html#comparison_table">comparison table</a> between the libraries or this <a href="http://www.geekdave.com/?p=79">blog entry</a> which provides a good introduction.
 
 </p>
-<h2>Topics</h2>
+<h1>Topics</h1>
 <p>You can find the various &#39;Getting Started&#39; topics in the navigation bar above:
 
 </p>
